Rename service from dhl-flask-api to new-dhl-flask-api

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: dhl-flask-api
+    name: new-dhl-flask-api
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
